<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpaceX Rockets</string>

    <string name="welcome_start_button">Get Started</string>
    <string name="welcome_title">SpaceX Rockets</string>
    <string name="welcome_description">SpaceX is a private American aerospace manufacturer and space transportation services company headquartered in Hawthorne, California.\nThis application displays the rockets of SpaceX and its launches.\n\nTo refresh, swipe down on the rocket list.\nThe filter icon filters out inactive rockets.\n\nHave fun!</string>

    <string name="rockets_label">Rockets</string>
    <string name="rockets_country_title">Country:</string>
    <string name="rockets_engine_count_title">Engine count:</string>

    <string name="launches_label">Launches</string>
    <string name="launches_graph_title">Launches per year</string>
    <string name="launches_description_title">Rocket description</string>
    <string name="launches_list_title">Launches</string>
    <string name="launches_successful">Successful</string>
    <string name="launches_unsuccessful">Unsuccessful</string>
    <string name="launches_empty">No launches yet!</string>
</resources>
