<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="vm"
            type="hu.naturlecso.spacexrockets.features.welcome.WelcomeViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_big"
        android:paddingEnd="@dimen/margin_big"
        android:paddingBottom="@dimen/margin_big">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/welcome_description"
            android:textAppearance="?android:attr/textAppearance" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            android:visibility="@{vm.loading}"
            bind:invisibleType="@{View.INVISIBLE}"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/welcome_start_button"
            android:layout_gravity="center_horizontal"
            android:enabled="@{!vm.loading}"/>

    </LinearLayout>

</layout>
